--- a/QR.HTML
+++ b/QR.HTML
@@ -27,7 +27,7 @@
 </style>
 <body>
     <div class="BOX">
-        <img src="/QR.png">
+        <img src="QR.png">
         <p>ถ้าน้องเจอพี่ได้ น้องสุดยอดมากๆ ไว้เจอกันวันเฉลยน๊าาาา</p>
     </div>
     
