--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <!--พี่ขับรถPCXสีดำมาเรียนทุกวัน(ตอนกลับบ้านจะมีเพื่อนพี่นั่งซ้อนท้ายเหมือนเจ้ากรรมนายเวร) เป็นนักออกกราฟิกให้อาจารณ์ เพื่อนพี่ส่วนมากเป็นลิงรวมถึงพี่ด้วย อุ๊ๆๆอ๊าๆๆๆๆๆ ชอบนั่งคาเฟ่ ชอบสั่งน้ำชาซ่ะส่วนใหญ่ ซื้อให้พี่ด้วยพี่จะดีใจมั้กๆ ชอบเล่นเกมด้วย RoV เล่นประจำ ชวนพี่ตีป้อมได้ เหงามั้กๆ สุดท้ายนี้พวกพี่จะซ้อมแข่งขันที่ชั้น 6 ตอนเย็นทุกวัน พี่อาจจะไม่ได้อยู่บ้างแต่ส่วนมากอยู่-->
+    <!--พี่ขับรถPCXสีดำมาเรียนทุกวัน(ตอนกลับบ้านจะมีเพื่อนพี่นั่งซ้อนท้ายเหมือนเจ้ากรรมนายเวร) พี่สูง175ซม. ทรงผมจะแตกต่างทุกคน เป็นนักออกกราฟิกให้อาจารณ์ เพื่อนพี่ส่วนมากเป็นลิงรวมถึงพี่ด้วย อุ๊ๆๆอ๊าๆๆๆๆๆ ชอบนั่งคาเฟ่ ชอบสั่งน้ำชาซ่ะส่วนใหญ่ ซื้อให้พี่ด้วยพี่จะดีใจมั้กๆ ชอบเล่นเกมด้วย RoV เล่นประจำ ชวนพี่ตีป้อมได้ เหงามั้กๆ สุดท้ายนี้พวกพี่จะซ้อมแข่งขันที่ชั้น 6 ตอนเย็นทุกวัน พี่อาจจะไม่ได้อยู่บ้างแต่ส่วนมากอยู่-->
     <div class="BOX">
         <h1>คำใบ้</h1>
         <h5>พี่รู้นะว่าน้องเข้ามา5555+ เก่งมาก แต่ยังไม่เจอพี่หรอกนะจ๊ะ และนี่คือคำใบ้เพิ่ม</h5>
